feat: 인사이트 지역 화면 UI 구현

--- a/app/src/main/res/layout/fragment_storage.xml
+++ b/app/src/main/res/layout/fragment_storage.xml
@@ -139,6 +139,7 @@
                                 tools:text="1 / 4" />
 
                             <TextView
+                                android:id="@+id/tv_insight_region_see_all"
                                 style="@style/T_400_14_19_6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
