--- a/app/src/main/res/layout/item_insight_region.xml
+++ b/app/src/main/res/layout/item_insight_region.xml
@@ -6,107 +6,96 @@
     <data>
 
         <variable
+            name="viewModel"
+            type="info.imdang.imdang.ui.main.storage.region.InsightRegionViewModel" />
+
+        <variable
             name="item"
             type="info.imdang.imdang.model.insight.InsightRegionVo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@{item.isSelected ? @drawable/sr_orange500_all10 : @drawable/sr_gray100_all10}"
+        android:layout_height="wrap_content"
         android:padding="20dp"
-        tools:background="@drawable/sr_orange500_all10">
-
-        <ImageView
-            android:id="@+id/iv_location"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_location"
-            app:layout_constraintBottom_toBottomOf="@id/tv_location"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_location"
-            app:tint="@color/white" />
+        android:onClick="@{() -> viewModel.onClickInsight(item)}">
 
         <TextView
-            android:id="@+id/tv_location"
-            style="@style/T_600_18_25_2"
+            android:id="@+id/tv_insight_region"
+            style="@style/T_500_16_22_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
             android:text="@{item.region}"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toEndOf="@id/iv_location"
+            android:textColor="@color/gray_900"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="서울시 강남구 신논현동" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_apt_count"
-            android:layout_width="0dp"
-            android:layout_height="46dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/sr_1affffff_all8"
-            android:paddingHorizontal="16dp"
-            app:layout_constraintEnd_toStartOf="@id/cl_insight_count"
-            app:layout_constraintHorizontal_chainStyle="spread"
+        <TextView
+            android:id="@+id/tv_apt_subject"
+            style="@style/T_500_14_19_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/apt"
+            android:textColor="@color/gray_700"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_location">
+            app:layout_constraintTop_toBottomOf="@id/tv_insight_region" />
 
-            <TextView
-                style="@style/T_500_14_19_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/apt"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_apt_count"
+            style="@style/T_500_14_19_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@{item.aptCount + `개`}"
+            android:textColor="@color/orange_500"
+            app:layout_constraintStart_toEndOf="@id/tv_apt_subject"
+            app:layout_constraintTop_toTopOf="@id/tv_apt_subject"
+            tools:text="3개" />
 
-            <TextView
-                style="@style/T_600_16_22_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{item.aptCount + `개`}"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="3개" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_insight_count"
-            android:layout_width="0dp"
-            android:layout_height="46dp"
+        <View
+            android:id="@+id/view_divider"
+            android:layout_width="1dp"
+            android:layout_height="14dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/sr_1affffff_all8"
-            android:paddingHorizontal="16dp"
+            android:background="@color/gray_100"
+            app:layout_constraintBottom_toBottomOf="@id/tv_apt_subject"
+            app:layout_constraintStart_toEndOf="@id/tv_apt_count"
+            app:layout_constraintTop_toTopOf="@id/tv_apt_subject" />
+
+        <TextView
+            android:id="@+id/tv_insight_subject"
+            style="@style/T_500_14_19_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/insight"
+            android:textColor="@color/gray_700"
+            app:layout_constraintStart_toEndOf="@id/view_divider"
+            app:layout_constraintTop_toTopOf="@id/tv_apt_subject" />
+
+        <TextView
+            android:id="@+id/tv_insight_count"
+            style="@style/T_500_14_19_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@{item.insightCount + `개`}"
+            android:textColor="@color/orange_500"
+            app:layout_constraintStart_toEndOf="@id/tv_insight_subject"
+            app:layout_constraintTop_toTopOf="@id/tv_apt_subject"
+            tools:text="3개" />
+
+        <ImageView
+            android:id="@+id/iv_radio_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:importantForAccessibility="no"
+            android:src="@{item.isSelected ? @drawable/ic_radio_on : @drawable/ic_radio_off}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toEndOf="@id/cl_apt_count"
-            app:layout_constraintTop_toBottomOf="@id/tv_location">
-
-            <TextView
-                style="@style/T_500_14_19_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/insight"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/T_600_16_22_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{item.insightCount + `개`}"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="3개" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_radio_on" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
