--- a/component/src/main/res/values/themes.xml
+++ b/component/src/main/res/values/themes.xml
@@ -14,4 +14,12 @@
         <item name="windowSplashScreenAnimationDuration">200</item>
         <item name="postSplashScreenTheme">@style/Theme.Imdang</item>
     </style>
+
+    <style name="Rounded12BottomSheetDialog" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/Rounded12BottomSheet</item>
+    </style>
+    
+    <style name="Rounded12BottomSheet">
+        <item name="android:background">@drawable/sr_white_top12</item>
+    </style>
 </resources>
