--- a/component/src/main/res/drawable/gradient_gray25_100.xml
+++ b/component/src/main/res/drawable/gradient_gray25_100.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- black, opacity 8% -->
+    <!-- gray25, opacity 100% -->
     <gradient
-        android:angle="270"
-        android:endColor="#00000000"
-        android:startColor="#14000000" />
+        android:angle="90"
+        android:endColor="#00FBFBFB"
+        android:startColor="#FFFBFBFB" />
 </shape>
