--- a/component/src/main/res/values/text-styles.xml
+++ b/component/src/main/res/values/text-styles.xml
@@ -23,6 +23,11 @@
         <item name="android:lineHeight">22.4dp</item>
     </style>
 
+    <style name="T_600_12_16_8" parent="pretendard600">
+        <item name="android:textSize">12sp</item>
+        <item name="android:lineHeight">16.8dp</item>
+    </style>
+
     <style name="T_600_14_19_6" parent="pretendard600">
         <item name="android:textSize">14sp</item>
         <item name="android:lineHeight">19.6dp</item>
