--- a/app/src/main/res/layout/item_insight_vertical.xml
+++ b/app/src/main/res/layout/item_insight_vertical.xml
@@ -6,18 +6,23 @@
     <data>
 
         <variable
+            name="viewModel"
+            type="info.imdang.imdang.base.BaseViewModel" />
+
+        <variable
             name="item"
             type="info.imdang.imdang.model.insight.InsightVo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> viewModel.onClickItem(item)}">
 
         <ImageView
             android:id="@+id/iv_insight"
-            bindImage="@{item.thumbnail}"
             bindCornerRadius="@{4}"
+            bindImage="@{item.thumbnail}"
             android:layout_width="200dp"
             android:layout_height="160dp"
             android:importantForAccessibility="no"
