--- a/component/src/main/res/values/colors.xml
+++ b/component/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="gray_700">#5B5B5B</color>
     <color name="gray_800">#3C3C3C</color>
     <color name="gray_900">#1E1E1E</color>
+
+    <color name="red">#E93528</color>
 </resources>
